<resources>
    <string name="app_name">Players Manchester City</string>
    <string name="players_name">Player Name</string>
    <string name="description">Description</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="about">About</string>
    <string name="detail">Detail</string>
    <string name="text_description">Description</string>
    <string name="share">Share</string>
    <string name="position">Position :</string>
    <string name="sampel_possition">sampel_possition</string>
    <string name="sampel_date">sampel_date</string>
    <string name="nationality">Nationality :</string>
    <string name="sampel_national">sampel_national</string>
    <string-array name="data_name">
        <item>Ederson</item>
        <item>Rúben Dias</item>
        <item>Jeremy Doku</item>
        <item>Kevin De Bruyne</item>
        <item>Phil Foden</item>
        <item>Jack Grealish</item>
        <item>Erling Haaland</item>
        <item>Rodri</item>
        <item>Bernardo Silva</item>
        <item>Kyle Walker</item>
        <item>Kun Aguero</item>
    </string-array>
</resources>